add telegram bot and grafana
